@@ -189,9 +189,9 @@ class TestAccountCommand(clibase.BaseCLITest):
         self.m_get_client.assert_called_once_with('account', mock.ANY)
         self.m_client.disable.assert_called_once_with(account_id)
 
-    def test_account_status_show(self):
+    def test_account_state_show(self):
         account_id = '69'
-        args = 'account status show {0}'.format(account_id)
+        args = 'account state show {0}'.format(account_id)
         self.m_client.is_active.return_value = True
         self.exec_command(args)
 
