@@ -43,7 +43,7 @@ gerritclient =
     account_ssh-key_delete=gerritclient.commands.account:AccountSSHKeyDelete
     account_ssh-key_list=gerritclient.commands.account:AccountSSHKeyList
     account_ssh-key_show=gerritclient.commands.account:AccountSSHKeyShow
-    account_status_show=gerritclient.commands.account:AccountStatusShow
+    account_state_show=gerritclient.commands.account:AccountStateShow
     account_username_set=gerritclient.commands.account:AccountSetUsername
     change_create=gerritclient.commands.change:ChangeCreate
     change_list=gerritclient.commands.change:ChangeList
